ceiling lights page complete

--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Home</title>
+      <title>Neelux | Wall Lamps</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -36,14 +36,14 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
              <!-- <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a> -->
-             <a class="navbar-brand" href="index.html"><b>NEELUX</b></a>
+             <a class="navbar-brand" href="../index.html"><b>NEELUX</b></a>
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
              </button>
              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav ml-auto">
                  <li class="nav-item active">
-                   <a class="nav-link" href="index.html">Home</a>
+                   <a class="nav-link" href="../index.html">Home</a>
                  </li>
                  <!-- <li class="nav-item">
                    <a class="nav-link" href="product.html">Product</a>
@@ -67,13 +67,13 @@
                    </div>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="about.html">About</a>
+                   <a class="nav-link" href="../about.html">About</a>
                  </li>
                  <li class="nav-item dropdown">
                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown">Support</a>
                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                     <a class="dropdown-item" href="support.html">Contact Us</a>
-                     <a class="dropdown-item" href="./assets/privacy-policy.html">Privacy Policy</a>
+                     <a class="dropdown-item" href="../support.html">Contact Us</a>
+                     <a class="dropdown-item" href="../assets/privacy-policy.html">Privacy Policy</a>
                    </div>
                  </li>
                </ul>
@@ -153,7 +153,7 @@
       </div>
       <!-- header section end -->
       <!-- LIGHTS section start -->
-      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+      <!-- <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
          <div class="container">
             <div class="row">
                <h1 class="coffee_taital">OUR ITEMS</h1>
@@ -210,11 +210,11 @@
                   <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
-                           <!-- <div class="col-lg-3 col-md-6">
+                           <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/wl4.jpeg"></div>
                               <h3 class="types_text">WALL LAMPS</h3>
                               <div class="read_bt"><a href="#">Check it</a></div>
-                           </div> -->
+                           </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="./img/chandelier/dl42.jpg"></div>
                               <h3 class="types_text">DL-0042</h3>
@@ -223,11 +223,11 @@
                               <div class="coffee_img"><img src="./img/chandelier/dl43.jpg"></div>
                               <h3 class="types_text">DL-0043</h3>
                            </div>
-                           <!-- <div class="col-lg-3 col-md-6">
+                           <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/3.jpeg"></div>
                               <h3 class="types_text">STRIP LIGHTS</h3>
                               <div class="read_bt"><a href="#">Check it</a></div>
-                           </div> -->
+                           </div>
                         </div>
                      </div>
                   </div>
@@ -240,7 +240,7 @@
                </a>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- LIGHTS section end -->
      
       <!-- footer section start -->
@@ -265,23 +265,23 @@
                           <ul>
                             <li>
                               <i class="bx bx-chevron-right"></i>
-                              <a href="index.html">Home</a>
+                              <a href="../index.html">Home</a>
                             </li>
                             <li>
                               <i class="bx bx-chevron-right"></i>
-                              <a href="about.html">About us</a>
+                              <a href="../about.html">About us</a>
                             </li>
                             <li>
                               <i class="bx bx-chevron-right"></i>
-                              <a href="products.html">Products</a>
+                              <a href="../products.html">Products</a>
                             </li>
                             <li>
                               <i class="bx bx-chevron-right"></i>
-                              <a href="support.html">Support</a>
+                              <a href="../support.html">Support</a>
                             </li>
                             <li>
                               <i class="bx bx-chevron-right"></i>
-                              <a href="./assets/privacy-policy.html">Privacy policy</a>
+                              <a href="../assets/privacy-policy.html">Privacy policy</a>
                             </li>
                           </ul>
                         </div>
@@ -293,23 +293,23 @@
                               <ul>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/flood.html">Flood Lights</a>
+                                  <a href="../products/flood.html">Flood Lights</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/street.html">Street Lights</a>
+                                  <a href="../products/street.html">Street Lights</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                   <a href="./products/led_bulb.html">Bulbs</a>
+                                   <a href="../products/led_bulb.html">Bulbs</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/strip.html">Strip Light</a>
+                                  <a href="../products/strip.html">Strip Light</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/track.html">Track lights</a>
+                                  <a href="../products/track.html">Track lights</a>
                                 </li>
                               </ul>
                             </div>
@@ -317,23 +317,23 @@
                               <ul>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/ceilin.html">Ceiling Lights</a>
+                                  <a href="../products/ceilin.html">Ceiling Lights</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/wall.html">Wall Lamps</a>
+                                  <a href="../products/wall.html">Wall Lamps</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/chandelier.html">Chandeliers</a>
+                                  <a href="../products/chandelier.html">Chandeliers</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/down.html">Panel Lamps</a>
+                                  <a href="../products/down.html">Panel Lamps</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/tubes.html">Led Tubes</a>
+                                  <a href="../products/tubes.html">Led Tubes</a>
                                 </li>
                               </ul>
                             </div>
