working on wall lamps page

--- a/products/test.html
+++ b/products/test.html
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_sec">
+      <div class="header_sect">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -97,7 +97,7 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/chandelier/header/dl-020.jpg"></div>
+                              <div class="banner_img"><img src="img/walls/header/wall.jpeg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
@@ -111,7 +111,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/chandelier/header/dl-039.jpg"></div>
+                              <div class="banner_img"><img src="img/walls/header/new-bulk-removebg-preview.png"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
@@ -127,7 +127,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/chandelier/header/dl-043.jpg"></div>
+                              <div class="banner_img"><img src="img/walls/header/bulk-head-removebg-preview.png"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
