wall lamps page done

--- a/products/test.html
+++ b/products/test.html
@@ -97,12 +97,12 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/walls/header/wall.jpeg"></div>
+                              <div class="banner_img"><img src="img/walls/header/wall.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">CHANDELIERS</h1>
-                                 <h5 class="tasty_text">THE BEST</h5>
+                                 <h1 class="banner_taital">WALL LAMPS </h1>
+                                 <h5 class="tasty_text">UNIQUE</h5>
                                  <p class="banner_text">DESIGNS </p>
                               </div>
                            </div>
@@ -111,14 +111,14 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/walls/header/new-bulk-removebg-preview.png"></div>
+                              <div class="banner_img"><img src="img/walls/header/new-bulk.jpeg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
                                 <div class="banner_taital_main">
-                                 <h1 class="banner_taital">CHANDELIERS</h1>
-                                 <h5 class="tasty_text">THE BEST</h5>
-                                 <p class="banner_text">DESIGNS </p>
+                                 <h1 class="banner_taital">NEW BULK HEAD</h1>
+                                 <h5 class="tasty_text">SIMPLE AND ELEGANT</h5>
+                                 <p class="banner_text">DESIGN</p>
                                </div>
                               </div>
                            </div>
@@ -127,13 +127,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/walls/header/bulk-head-removebg-preview.png"></div>
+                              <div class="banner_img"><img src="img/walls/header/bulk-head.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital">CHANDELIERS</h1>
-                                 <h5 class="tasty_text">THE BEST</h5>
-                                 <p class="banner_text">DESIGNS </p>
+                              <h1 class="banner_taital">BULK HEAD</h1>
+                                 <h5 class="tasty_text">ROUND AND OVAL</h5>
+                                 <p class="banner_text">AVAILABLE</p>
                            </div>
                               </div>
                            </div>
@@ -153,7 +153,7 @@
       </div>
       <!-- header section end -->
       <!-- LIGHTS section start -->
-      <!-- <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
          <div class="container">
             <div class="row">
                <h1 class="coffee_taital">OUR ITEMS</h1>
@@ -167,20 +167,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/chandelier/dl16.jpg"></div>
-                              <h3 class="types_text">DL-0016</h3>
+                              <div class="coffee_img"><img src="img/walls/bulk-head-oval.jpg"></div>
+                              <h3 class="types_text">BULK HEAD OVAL</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/chandelier/dl17.jpg"></div>
-                              <h3 class="types_text">DL-0017</h3>
+                              <div class="coffee_img"><img src="img/walls/bulk-head-round.jpg"></div>
+                              <h3 class="types_text">BULK HEAD ROUND</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/chandelier/dl20.jpg"></div>
-                              <h3 class="types_text">DL-0020</h3>
+                              <div class="coffee_img"><img src="img/walls/new-bulk.jpg"></div>
+                              <h3 class="types_text">NEW BULK HEAD DESIGN</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/chandelier/dl23.jpg"></div>
-                              <h3 class="types_text">DL-0023</h3>
+                              <div class="coffee_img"><img src="img/walls/wall1.jpeg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
                            </div>
                         </div>
                      </div>
@@ -189,25 +189,25 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/chandelier/dl25.jpg"></div>
-                              <h3 class="types_text">DL-0025</h3>
+                              <div class="coffee_img"><img src="img/walls/wall2_edited.jpg"></div>
+                              <h3 class="types_text">WALL LAMP </h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/chandelier/dl34.jpg"></div>
-                              <h3 class="types_text">DL-0034</h3>
+                              <div class="coffee_img"><img src="img/walls/wall3_edited.jpg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/chandelier/dl38.jpg"></div>
-                              <h3 class="types_text">DL-0038</h3>
+                              <div class="coffee_img"><img src="img/walls/wall4_edited.jpg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/chandelier/dl39.jpg"></div>
-                              <h3 class="types_text">DL-0039</h3>
+                              <div class="coffee_img"><img src="img/walls/wl1.jpg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
                            </div>
                         </div>
                      </div>
                   </div>
-                  <div class="carousel-item">
+                  <!-- <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
@@ -230,7 +230,7 @@
                            </div>
                         </div>
                      </div>
-                  </div>
+                  </div> -->
                </div>
                <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
                <i class="fa fa-arrow-left"></i>
@@ -240,7 +240,81 @@
                </a>
             </div>
          </div>
-      </div> -->
+      </div>
+      <!-- LIGHTS section end -->
+      <!-- LIGHTS section start -->
+      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+         <!-- <div class="container">
+            <div class="row">
+               <h1 class="coffee_taital">OUR ITEMS</h1>
+               <div class="bulit_icon"><img src="../images/bulit-icon.png"></div>
+            </div>
+         </div> -->
+         <div class="coffee_section_2">
+            <div id="main_slider" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wl2.jpeg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wl3.jpeg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wl4.jpeg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wl5.jpeg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+            </div>
+         </div>
+      </div>
+      <!-- LIGHTS section end -->
+      <!-- LIGHTS section start -->
+      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+         <!-- <div class="container">
+            <div class="row">
+               <h1 class="coffee_taital">OUR ITEMS</h1>
+               <div class="bulit_icon"><img src="../images/bulit-icon.png"></div>
+            </div>
+         </div> -->
+         <div class="coffee_section_2">
+            <div id="main_slider" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wl6.jpeg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wl7.jpeg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wall.jpg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                           <!-- <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wl5.jpeg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div> -->
+                        </div>
+                     </div>
+                  </div>
+            </div>
+         </div>
+      </div>
       <!-- LIGHTS section end -->
      
       <!-- footer section start -->
