working on down lights

--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Wall Lamps</title>
+      <title>Neelux | Down Lights</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_sect">
+      <div class="header_set">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -90,20 +90,20 @@
             </nav>
          </div>
          <!-- banner section start --> 
-         <div class="banner_section layout_padding">
+         <!-- <div class="banner_section layout_padding">
             <div class="container">
                <div id="banner_slider" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/walls/header/wall.jpg"></div>
+                              <div class="banner_img"><img src="img/dls/header/dl-0028.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">WALL LAMPS </h1>
+                                 <h1 class="banner_taital">DL-0028 </h1>
                                  <h5 class="tasty_text">UNIQUE</h5>
-                                 <p class="banner_text">DESIGNS </p>
+                                 <p class="banner_text">DESIGN</p>
                               </div>
                            </div>
                         </div>
@@ -111,14 +111,12 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/walls/header/new-bulk.jpeg"></div>
+                              <div class="banner_img"><img src="img/dls/header/downlight.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
                                 <div class="banner_taital_main">
-                                 <h1 class="banner_taital">NEW BULK HEAD</h1>
-                                 <h5 class="tasty_text">SIMPLE AND ELEGANT</h5>
-                                 <p class="banner_text">DESIGN</p>
+                                 <h1 class="banner_taital">PANEL LAMPS</h1>
                                </div>
                               </div>
                            </div>
@@ -127,13 +125,12 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/walls/header/bulk-head.jpg"></div>
+                              <div class="banner_img"><img src="img/dls/header/dl-0032.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital">BULK HEAD</h1>
-                                 <h5 class="tasty_text">ROUND AND OVAL</h5>
-                                 <p class="banner_text">AVAILABLE</p>
+                              <h1 class="banner_taital">DL-0032</h1>
+                              <h5 class="tasty_text">ELEGANT</h5>
                            </div>
                               </div>
                            </div>
@@ -146,7 +143,7 @@
                   <a class="carousel-control-next" href="#banner_slider" role="button" data-slide="next">
                   <i class="fa fa-arrow-right"></i>
                   </a>
-               </div>
+               </div> -->
             </div>
          </div>
          <!-- banner section end -->
@@ -207,30 +204,6 @@
                         </div>
                      </div>
                   </div>
-                  <!-- <div class="carousel-item">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/wl4.jpeg"></div>
-                              <h3 class="types_text">WALL LAMPS</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="./img/chandelier/dl42.jpg"></div>
-                              <h3 class="types_text">DL-0042</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="./img/chandelier/dl43.jpg"></div>
-                              <h3 class="types_text">DL-0043</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/3.jpeg"></div>
-                              <h3 class="types_text">STRIP LIGHTS</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div> -->
                </div>
                <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
                <i class="fa fa-arrow-left"></i>
@@ -250,7 +223,7 @@
                <div class="bulit_icon"><img src="../images/bulit-icon.png"></div>
             </div>
          </div> -->
-         <div class="coffee_section_2">
+         <!-- <div class="coffee_section_2">
             <div id="main_slider" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -276,7 +249,7 @@
                      </div>
                   </div>
             </div>
-         </div>
+         </div> -->
       </div>
       <!-- LIGHTS section end -->
       <!-- LIGHTS section start -->
@@ -287,7 +260,7 @@
                <div class="bulit_icon"><img src="../images/bulit-icon.png"></div>
             </div>
          </div> -->
-         <div class="coffee_section_2">
+         <!-- <div class="coffee_section_2">
             <div id="main_slider" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -304,7 +277,7 @@
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="img/walls/wall.jpg"></div>
                               <h3 class="types_text">WALL LAMP</h3>
-                           </div>
+                           </div> -->
                            <!-- <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="img/walls/wl5.jpeg"></div>
                               <h3 class="types_text">WALL LAMP</h3>
